--- a/1_1_jiandang7.html
+++ b/1_1_jiandang7.html
@@ -11,9 +11,11 @@
     <link href="Styles/animate.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/video-js.min.css" rel="stylesheet" type="text/css"/>
     <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css"/>
-
     <link href="Styles/app.css" rel="stylesheet" type="text/css"/>
-</head>
+    <script>
+      g_autoplay = 4500;
+    </script>
+  </head>
 <body>
 <div class="page jiandang7 tdc-detail">
     <div class="container">
@@ -48,48 +50,46 @@
                     </div>
                     <div id="image_list" class=" bodypart">
                         <div class="grid" style="display:none;">
-                            <div class="width-4-5">
-                                <div class="col-1-2-top">
-                                    <div class="width-1-2" style="padding:0 16px  0 0;"><a
-                                            href="images/jiandang7/d-02.jpg" data-lightbox="lightbox"><img
-                                            src="./images/jiandang/jiandang-02.png" class="img-fullw"> </a></div>
-                                    <div class="width-1-2" style="padding:0 16px  0 0;"><a
-                                            href="images/jiandang7/i5.jpg" data-lightbox="lightbox"><img
-                                            src="./images/jiandang7/i5.jpg" class="img-fullh"> </a></div>
-                                </div>
-                                <div class="col-1-2-bottom">
-                                    <div class="width-1-2" style="padding:0 16px  0 0;"><a
-                                            href="images/jiandang7/d-03.jpg" data-lightbox="lightbox"><img
-                                            src="./images/jiandang/jiandang-03.png" class="img-fulls"> </a></div>
-                                    <div class="width-1-2" style="padding:0 16px  0 0;"><a
+                            <div class="height-1-2">
+                                    <div class="width-1-4" style="padding:0 8px  8px 8px;"><a
+                                            href="images/jiandang7/i1.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiandang7/i1s.jpg" class="img-fullh"> </a></div>
+                                    <div class="width-1-4" style="padding:0 8px  8px 8px;"><a
                                             href="images/jiandang7/i2.jpg" data-lightbox="lightbox"><img
-                                            src="./images/jiandang7/i2.jpg" class="img-fullh"> </a></div>
-                                </div>
+                                            src="./images/jiandang7/i2s.jpg" class="img-fullh"> </a></div>
+                                    <div class="width-1-4" style="padding:0 8px  8px 8px;"><a
+                                            href="images/jiandang7/i3.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiandang7/i3s.jpg" class="img-fullh"> </a></div>
+                                    <div class="width-1-4" style="padding:0 8px  8px 8px;"><a
+                                            href="images/jiandang7/i4.jpg" data-lightbox="lightbox"><img
+                                            src="./images/jiandang7/i4s.jpg" class="img-fullh"> </a></div>
                             </div>
-                            <div class="width-1-5">
-                                <div class="height-1-3" style="padding:0 0 8px 0;"><a href="images/jiandang7/i6.jpg"
+                            <div class="height-1-2">
+                                <div class="width-1-4" style="padding:8px  8px 0 8px;"><a href="images/jiandang7/i5.jpg"
                                                                                       data-lightbox="lightbox"><img
-                                        src="./images/jiandang7/i6.jpg" class="img-fullh"> </a></div>
-                                <div class="height-1-3" style="padding:8px 0;"><a href="images/jiandang7/i3.jpg"
+                                        src="./images/jiandang7/i5s.jpg" class="img-fullh"> </a></div>
+                                <div class="width-1-4" style="padding:8px  8px 0 8px;"><a href="images/jiandang7/i6.jpg"
                                                                                   data-lightbox="lightbox"><img
-                                        src="./images/jiandang7/i3.jpg" class="img-fullh"> </a></div>
-                                <div class="height-1-3" style="padding:8px 0 0 0;"><a href="images/jiandang7/i4.jpg"
+                                        src="./images/jiandang7/i6s.jpg" class="img-fullh"> </a></div>
+                                <div class="width-1-4" style="padding:8px  8px 0 8px;"><a href="images/jiandang7/i7.jpg"
                                                                                       data-lightbox="lightbox"><img
-                                        src="./images/jiandang7/i4.jpg" class="img-fullh"> </a></div>
+                                        src="./images/jiandang7/i7s.jpg" class="img-fullh"> </a></div>
+                                <div class="width-1-4" style="padding:8px  8px 0 8px;"><a href="images/jiandang7/i8.jpg"
+                                                                                      data-lightbox="lightbox"><img
+                                        src="./images/jiandang7/i8s.jpg" class="img-fullh"> </a></div>
                             </div>
                         </div>
 
                         <div class="swiper swiper-container">
                             <div class="swiper-wrapper">
-                              <div class="swiper-slide"><img src="images/jiandang7/i2.jpg"></div>
                               <div class="swiper-slide"><img src="images/jiandang7/i1.jpg"></div>
+                              <div class="swiper-slide"><img src="images/jiandang7/i2.jpg"></div>
+                              <div class="swiper-slide"><img src="images/jiandang7/i3.jpg"></div>
                               <div class="swiper-slide"><img src="images/jiandang7/i4.jpg"></div>
                               <div class="swiper-slide"><img src="images/jiandang7/i5.jpg"></div>
                               <div class="swiper-slide"><img src="images/jiandang7/i6.jpg"></div>
                               <div class="swiper-slide"><img src="images/jiandang7/i7.jpg"></div>
-                              <div class="swiper-slide"><img src="images/jiandang7/i3.jpg"></div>
-                              <div class="swiper-slide"><img src="images/jiandang7/d-02.jpg"></div>
-                              <div class="swiper-slide"><img src="images/jiandang7/d-03.jpg"></div>
+                              <div class="swiper-slide"><img src="images/jiandang7/i8.jpg"></div>
                               <div class="swiper-slide"><img src="images/jiandang7/i1.jpg"></div>
                             </div>
                         </div>
