--- a/1_1_jiandang3.html
+++ b/1_1_jiandang3.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>铁越集团</title>
+  <title>思想建设-铁越集团</title>
   <link href="Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/swiper.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/animate.min.css" rel="stylesheet" type="text/css" />
@@ -13,7 +13,7 @@
   <link href="Styles/lightbox.min.css" rel="stylesheet" type="text/css" />
   <link href="Styles/app.css" rel="stylesheet" type="text/css" />
   <script>
-    g_autoplay = 5000;
+    g_autoplay = 4000;
   </script>
 </head>
 <body>
@@ -50,20 +50,20 @@
             </div>
             <div id="image_list" class=" bodypart">
               <ul class="jiandanglist grid" style="display:none;">
-                <li><a href="images/jiandang3/i5.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang/jianlist1_03.png"> </a></li>
-                <li><a href="images/jiandang3/i1.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_06.png"> </a></li>
-                <li><a href="images/jiandang3/i1.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_08.png"> </a></li>
-                <li><a href="images/jiandang3/i6.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_11.png"> </a></li>
+                <li><a href="images/jiandang3/i1.jpg" data-lightbox="lightbox" >  <img src="./images/jiandang3/i1s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i2.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i2s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i3.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i3s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i4.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i4s.jpg"> </a></li>
 
-                <li><a href="images/jiandang3/i4.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_18.png"> </a></li>
-                <li><a href="images/jiandang3/i3.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_20.png"> </a></li>
-                <li><a href="images/jiandang3/i8.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_21.png"> </a></li>
-                <li><a href="images/jiandang3/i7.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_23.png"> </a></li>
+                <li><a href="images/jiandang3/i5.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i5s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i6.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i6s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i7.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i7s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i8.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i8s.jpg"> </a></li>
 
-                <li><a href="images/jiandang3/i9.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_29.png"> </a></li>
-                <li><a href="images/jiandang3/i10.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_31.png"> </a></li>
-                <li><a href="images/jiandang3/i12.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_33.png"> </a></li>
-                <li><a href="images/jiandang3/i11.jpg" data-lightbox="lightbox" > <img src="./images/jiandang/jianlist1_35.png"> </a></li>
+                <li><a href="images/jiandang3/i9.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i9s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i10.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i10s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i11.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i11s.jpg"> </a></li>
+                <li><a href="images/jiandang3/i12.jpg" data-lightbox="lightbox" > <img src="./images/jiandang3/i12s.jpg"> </a></li>
               </ul>
               <div class="swiper swiper-container">
                 <div class="swiper-wrapper">
@@ -75,6 +75,10 @@
                   <div class="swiper-slide">	<img src="images/jiandang3/i6.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang3/i7.jpg">	</div>
                   <div class="swiper-slide">	<img src="images/jiandang3/i8.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang3/i9.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang3/i10.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang3/i11.jpg">	</div>
+                  <div class="swiper-slide">	<img src="images/jiandang3/i12.jpg">	</div>
                 </div>
               </div>
             </div>
